k8s/istio-gateway.yaml
apiVersion: networking.istio.io/v1
kind: Gateway
metadata:
  name: savingsites-node-backend-gateway
spec:
  selector:
    istio: ingressgateway 
  servers:
  - port:
      number: 8080
      name: http
      protocol: HTTP
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1
kind: VirtualService
metadata:
  name: savingsites-node-backend
spec:
  hosts:
  - "*"
  gateways:
  - savingsites-node-backend-gateway
  http:
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        host: savingsites-node-backend
        port:
          number: 5000
